<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlowPrototyping</string>
    <string name="no_image">No Image</string>
    <string name="menu_add_project">Add Project</string>
    <string name="menu_add_page">Add page</string>
    <string name="menu_play">Play</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_web">Web</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_link_to">Link To</string>
    <string name="menu_create">Create</string>
    <string name="title_selected">%1$d selected</string>
    <string name="page_added">Page added</string>
    <string name="fail_to_add">Fail to add</string>
    <string name="no_page_selected">No page selected</string>
    <string name="error_on_loading_project">Error on loading project</string>
    <string name="not_implemented_yet">Not Implemented Yet</string>
    <string name="remove_all_selected_pages">Remove all selected pages?</string>
    <string name="remove">Remove</string>
    <string name="wrong_project">Wrong project information</string>
    <string name="select_page_to_link">Select page to link</string>
    <string name="fail_to_load_page">Fail to load page</string>
    <string name="input_project_info">Input project info</string>
    <string name="error_subject_empty">Input subject</string>
    <string name="delete_unlink">Remove all link unlinked</string>
    <string name="subject">Subject</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="menu_export">Export</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_setting">Setting</string>
    <string name="pref_key_use_aviary">use_aviary</string>
    <string name="pref_summary_use_aviary">Crop, Retouching on add page</string>
    <string name="pref_title_use_aviary">Use image editor</string>
    <string name="pref_title_1">수정 설정</string>

</resources>