<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/add_page"
		android:icon="@drawable/content_new_picture"
		android:orderInCategory="100"
		android:showAsAction="ifRoom"
		android:title="@string/menu_add_page">
		<menu>
			<item
				android:id="@+id/gallery"
				android:icon="@android:drawable/ic_menu_gallery"
				android:title="@string/menu_gallery"/>
			<item
				android:id="@+id/camera"
				android:icon="@android:drawable/ic_menu_camera"
				android:title="@string/menu_camera"/>
			<item
				android:id="@+id/web"
				android:icon="@android:drawable/ic_menu_search"
				android:title="@string/menu_web"/>
		</menu>
	</item>
	<item
		android:id="@+id/play"
		android:icon="@android:drawable/ic_media_play"
		android:orderInCategory="200"
		android:showAsAction="never"
		android:title="@string/menu_play"/>
	<item
		android:id="@+id/edit"
		android:icon="@android:drawable/ic_menu_edit"
		android:orderInCategory="200"
		android:showAsAction="never"
		android:title="@string/menu_edit"/>

</menu>