<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:showAsAction="always"
        android:title="@string/menu_gallery"/>
    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_menu_camera"
        android:showAsAction="always"
        android:title="@string/menu_camera"/>
    <item
        android:id="@+id/play"
        android:icon="@android:drawable/ic_media_play"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_play"/>
    <item
        android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_edit"/>

</menu>